inventoryapp-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: rewrite
  namespace: app
spec:
  rules:
  - host: inventoryapp.52.226.103.162.nip.io
    http:
      paths:
      - backend:
          serviceName: inventoryapp-ms-svc
          servicePort: 80
        path: /inventoryapp(/|$)(.*)
